--- a/drag-drop-swipe-recyclerview-sample/src/main/res/layout/fragment_grid_list.xml
+++ b/drag-drop-swipe-recyclerview-sample/src/main/res/layout/fragment_grid_list.xml
@@ -1,29 +1,32 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:showIn="@layout/activity_main">
+    xmlns:tools="http://schemas.android.com/tools">
 
-    <com.ernestoyaquello.dragdropswiperecyclerview.DragDropSwipeRecyclerView
-        android:id="@+id/list"
+    <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:visibility="gone"
-        app:item_layout="@layout/list_item_grid_list_cardview"
-        app:behind_swiped_item_custom_layout="@layout/behind_swiped_grid_list"
-        app:behind_swiped_item_custom_layout_secondary="@layout/behind_swiped_grid_list_secondary"
-        app:swiped_item_opacity_fades_on_swiping="true"/>
+        tools:showIn="@layout/activity_main">
 
-    <ProgressBar
-        android:id="@+id/loading_indicator"
-        style="@style/Base.Widget.AppCompat.ProgressBar"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:indeterminate="true"
-        android:scaleX="1.25"
-        android:scaleY="1.25"
-        android:layout_gravity="center"/>
+        <com.ernestoyaquello.dragdropswiperecyclerview.DragDropSwipeRecyclerView
+            android:id="@+id/list"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:visibility="gone"
+            app:behind_swiped_item_custom_layout="@layout/behind_swiped_grid_list"
+            app:behind_swiped_item_custom_layout_secondary="@layout/behind_swiped_grid_list_secondary"
+            app:item_layout="@layout/list_item_grid_list_cardview"
+            app:swiped_item_opacity_fades_on_swiping="true" />
 
-</FrameLayout>
+        <ProgressBar
+            android:id="@+id/loading_indicator"
+            style="@style/Base.Widget.AppCompat.ProgressBar"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:indeterminate="true"
+            android:scaleX="1.25"
+            android:scaleY="1.25" />
+
+    </FrameLayout>
+</layout>
