--- a/drag-drop-swipe-recyclerview-sample/src/main/res/layout/fragment_log.xml
+++ b/drag-drop-swipe-recyclerview-sample/src/main/res/layout/fragment_log.xml
@@ -1,27 +1,30 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:fillViewport="true"
-    android:id="@+id/messages_container_container"
-    tools:showIn="@layout/activity_main">
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools">
 
-    <LinearLayout
+    <ScrollView
+        android:id="@+id/messages_container_container"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
+        android:fillViewport="true"
         android:orientation="vertical"
-        android:padding="@dimen/spacing_small">
+        tools:showIn="@layout/activity_main">
 
-        <TextView
-            android:id="@+id/messages"
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:fontFamily="monospace"
-            android:text="@string/empty_log"
-            tools:text="Message "/>
+            android:orientation="vertical"
+            android:padding="@dimen/spacing_small">
 
-    </LinearLayout>
+            <TextView
+                android:id="@+id/messages"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:fontFamily="monospace"
+                android:text="@string/empty_log"
+                tools:text="Message " />
 
-</ScrollView>
+        </LinearLayout>
+
+    </ScrollView>
+</layout>
