--- a/drag-drop-swipe-recyclerview-sample/src/main/res/layout/activity_main.xml
+++ b/drag-drop-swipe-recyclerview-sample/src/main/res/layout/activity_main.xml
@@ -8,7 +8,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
-        tools:context=".MainActivity">
+        tools:context="com.movemedical.recyclerview.sample.MainActivity">
 
         <FrameLayout
             android:id="@+id/see_log_button"
