--- a/drag-drop-swipe-recyclerview-sample/src/main/res/layout/fragment_horizontal_list.xml
+++ b/drag-drop-swipe-recyclerview-sample/src/main/res/layout/fragment_horizontal_list.xml
@@ -8,7 +8,7 @@
         android:layout_height="match_parent"
         tools:showIn="@layout/activity_main">
 
-        <com.ernestoyaquello.dragdropswiperecyclerview.DragDropSwipeRecyclerView
+        <com.movemedical.recyclerview.DragDropSwipeRecyclerView
             android:id="@+id/list"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
