--- a/drag-drop-swipe-recyclerview/src/main/res/values/attrs.xml
+++ b/drag-drop-swipe-recyclerview/src/main/res/values/attrs.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <declare-styleable name="DragDropSwipeRecyclerView">
+    <declare-styleable name="MoveRecyclerView">
         <attr name="divider" format="reference" />
         <attr name="behind_swiped_item_icon" format="reference" />
         <attr name="behind_swiped_item_icon_secondary" format="reference" />
