Fixed indexing error

--- a/drag-drop-swipe-recyclerview/src/main/res/values/attrs.xml
+++ b/drag-drop-swipe-recyclerview/src/main/res/values/attrs.xml
@@ -2,14 +2,14 @@
 <resources>
     <declare-styleable name="MoveRecyclerView">
         <attr name="divider" format="reference" />
-        <attr name="behind_swiped_item_icon" format="reference" />
-        <attr name="behind_swiped_item_icon_secondary" format="reference" />
-        <attr name="behind_swiped_item_icon_margin" format="dimension" />
-        <attr name="behind_swiped_item_icon_centered" format="boolean" />
-        <attr name="behind_swiped_item_bg_color" format="color" />
-        <attr name="behind_swiped_item_bg_color_secondary" format="color" />
-        <attr name="behind_swiped_item_custom_layout" format="reference" />
-        <attr name="behind_swiped_item_custom_layout_secondary" format="reference" />
-        <attr name="swiped_item_opacity_fades_on_swiping" format="boolean" />
+        <attr name="swiped_item_icon" format="reference" />
+        <attr name="swiped_item_icon_secondary" format="reference" />
+        <attr name="swiped_item_icon_margin" format="dimension" />
+        <attr name="swiped_item_icon_centered" format="boolean" />
+        <attr name="swiped_item_bg_color" format="color" />
+        <attr name="swiped_item_bg_color_secondary" format="color" />
+        <attr name="swiped_item_custom_layout" format="reference" />
+        <attr name="swiped_item_custom_layout_secondary" format="reference" />
+        <attr name="item_opacity_fades_on_swiping" format="boolean" />
     </declare-styleable>
 </resources>
