--- a/drag-drop-swipe-recyclerview-sample/src/main/res/layout/fragment_vertical_list.xml
+++ b/drag-drop-swipe-recyclerview-sample/src/main/res/layout/fragment_vertical_list.xml
@@ -13,12 +13,12 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:visibility="gone"
-            app:behind_swiped_item_bg_color="@color/swipeBehindBackground"
-            app:behind_swiped_item_bg_color_secondary="@color/swipeBehindBackgroundSecondary"
-            app:behind_swiped_item_icon="@drawable/ic_remove_item"
-            app:behind_swiped_item_icon_centered="false"
-            app:behind_swiped_item_icon_margin="@dimen/spacing_normal"
-            app:behind_swiped_item_icon_secondary="@drawable/ic_archive_item"
+            app:swiped_item_bg_color="@color/swipeBehindBackground"
+            app:swiped_item_bg_color_secondary="@color/swipeBehindBackgroundSecondary"
+            app:swiped_item_icon="@drawable/ic_remove_item"
+            app:swiped_item_icon_centered="false"
+            app:swiped_item_icon_margin="@dimen/spacing_normal"
+            app:swiped_item_icon_secondary="@drawable/ic_archive_item"
             app:divider="@drawable/divider_vertical_list"
             tools:listitem="@layout/list_item_vertical_list" />
 
