correct pkg naming. gradle updates

--- a/drag-drop-swipe-recyclerview-sample/src/main/res/layout/list_item_horizontal_list_cardview.xml
+++ b/drag-drop-swipe-recyclerview-sample/src/main/res/layout/list_item_horizontal_list_cardview.xml
@@ -7,7 +7,7 @@
 
         <variable
             name="item"
-            type="com.movemedical.recyclerview.sample.model.SampleItem" />
+            type="com.ernestoyaquello.recyclerview.sample.model.SampleItem" />
     </data>
 
     <androidx.cardview.widget.CardView
