--- a/drag-drop-swipe-recyclerview-sample/src/main/res/layout/list_item_grid_list_cardview.xml
+++ b/drag-drop-swipe-recyclerview-sample/src/main/res/layout/list_item_grid_list_cardview.xml
@@ -6,7 +6,7 @@
 
         <variable
             name="item"
-            type="com.movemedical.recyclerview.sample.model.SampleItem" />
+            type="com.ernestoyaquello.recyclerview.sample.model.SampleItem" />
     </data>
 
     <androidx.cardview.widget.CardView xmlns:app="http://schemas.android.com/apk/res-auto"
